# specKitEnhanced

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  constitution.md  package.json  pyproject.toml
agents/: sdd-orchestrator.md  sdd-scribe.md
docs/: 01-philosophy.md  02-template-catalog.md  03-harvest-methodology.md  04-pmos-bridge.md  05-adoption-for-teams.md
examples/greenfield-app/.specify/: profile.yml
examples/greenfield-app/specs/: constitution.md  decisions.md  glossary.md  history.md  lessons.md  personas.md  risks.md  system.md
extension/specKitEnhanced/: extension.yml
extension/specKitEnhanced/commands/: adr.md  api-contract.md  architecture.md  data-model.md  fill-all.md  observability.md  research.md  risk.md  runbook.md  security.md  ux-flow.md
presets/: core.yml  extended.yml  pm-os.yml
schemas/: frontmatter.schema.json  spec.schema.json
scripts/: smoke.sh
src/specify_x/: __init__.py  bridge_pmos.py  cli.py  harvest.py  install.py  presets.py  verify.py
templates/_voice/: caveman.md  verbose.md
templates/core/: architecture-template.md  constitution-template.md  decisions-template.md  design-template.md  glossary-template.md  history-template.md  lessons-template.md  personas-template.md  plan-template.md  research-template.md  risks-template.md  spec-template.md  system-template.md  tasks-template.md
templates/extended/: api-contract-template.md  data-model-template.md  observability-template.md  runbook-template.md  security-template.md  ux-flow-template.md
tests/: conftest.py  test_harvest.py  test_install.py  test_verify.py
(+20 files in other folders)
